[tool.poetry]
name = "frbvoe"
version = "0.1.0"
description = ""
authors = ["Shiny Brar <charanjotbrar@gmail.com>", "Thomas Abbot <thomas.abbot@mcgill.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
