[tool.poetry]
name = "frbvoe"
version = "0.3.0"
description = ""
authors = ["Shiny Brar <charanjotbrar@gmail.com>", "Thomas Abbot <thomas.abbot@mcgill.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
pydantic = {version = "^2.7.1", extras = ["email"]}
picologging = "^0.9.3"
comet = "^3.1.0"
sanic = {extras = ["ext"], version = "^23.12"}
motor = "^3.4.0"
numpy = "^1.26.4"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
frbvoe = "frbvoe.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
